created CategoryController and ProductController